# personal-chat-ai

./: .gitignore  Dockerfile  README copy.md  README.md  main.py  pyproject.toml  start.sh  test_logging_functions.py  test_models_simple.py  test_research_simple.py
.cursor/rules/: default.mdc
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
agents/: __init__.py  gemini_agent.py  gemini_agent_basic.py  gemini_agent_with_tools.py  langfuse_config.py  model_basic.py  research_agent.py
agents/models/: __init__.py  research_models.py
agents/prompts/: __init__.py  research_prompts.py
tests/: test_gemini_agent_with_tools.py  test_gemini_simple.py  test_model_basic_simple.py  test_research_agent.py
utils/: __init__.py  logging_utils.py
