[project]
name = "ai-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "httpx==0.25.2",
    "motor==3.3.2",
    "pydantic==2.5.0",
    "pymongo==4.6.0",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "python-multipart==0.0.6",
    "uvicorn[standard]==0.24.0",
    "langchain-core",
    "langchain-google-genai",
    "python-dotenv"
]
