[project]
name = "ai-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "httpx==0.25.2",
    "motor==3.3.2",
    "pymongo==4.6.0",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "python-multipart==0.0.6",
    "uvicorn[standard]==0.24.0",
    "langchain-google-genai",
    "python-dotenv",
    "langchain-tavily>=0.2.0",
    "langchain-core>=0.3.63",
    "pydantic>=2.11.5",
    "langgraph>=0.4.7",
    "typing_extensions>=4.5.0",
    "langfuse>=2.36.2",
    "langchain-openai>=0.3.19",
    "langchain-anthropic>=0.3.14",
]
